Devtools: Handle tab event in color picker and fix text line overflow
BUG=490535,490560

Review URL: https://codereview.chromium.org/1158723002

git-svn-id: svn://svn.chromium.org/blink/trunk@195895 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/elements/spectrum.css
+++ b/front_end/elements/spectrum.css
@@ -124,6 +124,7 @@
     padding: 0;
     -webkit-user-modify: read-write-plaintext-only;
     color: #333;
+    white-space: nowrap;
 }
 
 .spectrum-text-label {
